# JobNimbus

./: .gitignore  CLAUDE.md  README.md  TECH_STACK.md  Taskfile.yml  docker-compose.yml  package-lock.json  roofing-estimate-20hour-plan.md
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  config.py  logger.py  main.py  pyproject.toml  settings.py
backend/agent/: __init__.py  files.py  mcp_server.py  runner.py  sessions.py
backend/dao/: __init__.py  catalog_dao.py  database.py  eagleview_cache_dao.py  estimate_dao.py  listing_dao.py  property_dao.py  schema.sql
backend/docs/: frontend-handoff-pricing.md  handoff-pr1-models.md  handoff-pr2-daos.md  handoff-pr3-eagleview.md  handoff-pr4-test-suite.md  handoff-pr5-render-deploy.md
backend/docs/eagleview-api/: Imagery API Documentation.json  README.md  (+3 more)
backend/models/: __init__.py  address.py  catalog.py  estimate.py  listing.py  measurement.py  view.py
backend/providers/: eagleview.py
backend/routers/: aerial.py  agent.py  benchmark.py  blueprint.py  catalog.py  estimate.py  finalize.py  listings.py  measurement.py  model3d.py  places.py  pricing.py  proposal.py  proposal_send.py  roof_polygons.py  summary.py
backend/scripts/: benchmark_addresses.py  dump_eagleview_payload.py  precache_eagleview.py  probe_benchmark_addresses.py  seed.py  validate_measurements.py  validate_models_vs_api.py
backend/services/: email.py  image_cleanup.py  pricing.py  replicate.py  roof_polygon_service.py  summary.py  tripo.py
backend/tests/: conftest.py  test_logger.py  test_models.py  test_settings.py
(+88 files in other folders)
