[project]
name = "jobnimbus-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0",
    "python-json-logger>=3.1",
    "numpy>=2.0",
    "tifffile>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "respx>=0.21",
    "python-dotenv>=1.0.0",
]
